[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batchcal"
version = "0.1.0"
description = "Tiny wrapper for batched multi-provider LLM calls"
readme = "readme.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
]

[tool.setuptools]
packages = ["batchcal"]
py-modules = [
  "batchclient",
  "openai_provider",
  "msg",
  "llm_request",
  "llm_response",
  "usage",
  "provider",
  "backoff",
  "token_bucket",
]
